--- a/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/drug-details-dialog/drug-details-dialog.component.html
+++ b/src/app/chameleon-reports/geriatrics-drugs-on-vacation-component/drug-details-dialog/drug-details-dialog.component.html
@@ -18,26 +18,26 @@
     </ng-container>
 
     <!-- Way of Giving Column -->
-    <ng-container matColumnDef="Way_Of_Giving">
+    <ng-container matColumnDef="way_Of_Giving">
       <th mat-header-cell *matHeaderCellDef> צורת מתן </th>
-      <td mat-cell *matCellDef="let row">{{ row.Way_Of_Giving }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.way_Of_Giving }}</td>
     </ng-container>
 
     <!-- Drug Name Column -->
-    <ng-container matColumnDef="Drugs_Text">
+    <ng-container matColumnDef="drugs_Text">
       <th mat-header-cell *matHeaderCellDef> שם תרופה </th>
-      <td mat-cell *matCellDef="let row">{{ row.Drugs_Text }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.drugs_Text }}</td>
     </ng-container>
 
     <!-- Timing Column -->
-    <ng-container matColumnDef="FrequencyText">
+    <ng-container matColumnDef="frequencyText">
       <th mat-header-cell *matHeaderCellDef> תזמון </th>
-      <td mat-cell *matCellDef="let row">{{ row.FrequencyText }}</td>
+      <td mat-cell *matCellDef="let row">{{ row.frequencyText }}</td>
     </ng-container>
       <!--  -->
-      <ng-container matColumnDef="SpecificTime">
+      <ng-container matColumnDef="specificTime">
         <th mat-header-cell *matHeaderCellDef> תזמון </th>
-        <td mat-cell *matCellDef="let row">{{ row.SpecificTime }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.specificTime }}</td>
       </ng-container>
   
 
