--- a/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
+++ b/src/app/chameleon-reports/drug-surgery-report/drug-surgery-report.component.html
@@ -1,193 +1,158 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 <div class="body">
-   <!-- 👤 Profile Section -->
-   <div class="user-info">
+  <!-- 👤 Profile Section -->
+  <div class="user-info">
     <!-- <img [src]="profilePictureUrl" alt="User Profile" class="profile-pic" /> -->
     <div class="welcome-text">ברוך הבא {{ UserName }}</div>
   </div>
-  <div class="summary-card-wrapper" dir="rtl">
 
+  <div class="summary-card-wrapper" dir="rtl">
     <div class="gauge-wrapper">
-      <ngx-gauge 
+      <ngx-gauge
         [value]="noDrugsPercentage"
         [label]="'ללא תרופות ברשימה %'"
         [append]="'%'">
       </ngx-gauge>
-    
+
       <div class="gauge-summary">
         סה״כ: {{ totalRows }} | ללא תרופות: {{ noDrugsMatTableDataSource.data.length }}
       </div>
     </div>
-    
+
     <mat-card class="summary-card">
       <div
-    class="summary-box mat-accent"
-    (click)="applyColorFilter('green')"
-    [ngClass]="{ active: selectedColor === 'green' }">
-    30-60<br />{{ summary.green }}
-  </div>
-  <div
-    class="summary-box custom-orange"
-    (click)="applyColorFilter('orange')"
-    [ngClass]="{ active: selectedColor === 'orange' }">
-    0-30<br />{{ summary.orange }}
-  </div>
-  <div
-    class="summary-box mat-warn"
-    (click)="applyColorFilter('red')"
-    [ngClass]="{ active: selectedColor === 'red' }">
-    60+<br />{{ summary.red }}
-  </div>
-  <div
-  class="summary-box custom-grey"
-  (click)="applyNegativeOrEmptyFilter()"
-  [ngClass]="{ active: selectedColor === 'negativeOrEmpty' }">
-   ריק<br />{{ summary.negativeOrEmpty }}
-</div>
-  <div class="summary-box total">
-    סה"כ<br />{{ summary.total }}
-  </div>
+        class="summary-box mat-accent"
+        (click)="applyColorFilter('green')"
+        [ngClass]="{ active: selectedColor === 'green' }">
+        30-60<br />{{ summary.green }}
+      </div>
+
+      <div
+        class="summary-box custom-orange"
+        (click)="applyColorFilter('orange')"
+        [ngClass]="{ active: selectedColor === 'orange' }">
+        0-30<br />{{ summary.orange }}
+      </div>
+
+      <div
+        class="summary-box mat-warn"
+        (click)="applyColorFilter('red')"
+        [ngClass]="{ active: selectedColor === 'red' }">
+        60+<br />{{ summary.red }}
+      </div>
+
+      <div
+        class="summary-box custom-grey"
+        (click)="applyNegativeOrEmptyFilter()"
+        [ngClass]="{ active: selectedColor === 'negativeOrEmpty' }">
+        ריק<br />{{ summary.negativeOrEmpty }}
+      </div>
+
+      <div class="summary-box total">
+        סה"כ<br />{{ summary.total }}
+      </div>
+
       <button mat-stroked-button class="blue-button" (click)="clearColorFilter()">נקה סינון</button>
     </mat-card>
-    <button 
-    *ngIf="canManageICD9()"
-    mat-raised-button 
-    color="primary" 
-    (click)="openProcedureDialog()" 
-    style="margin: 10px;">
-    ניהול קודי ICD9
-  </button>
-  
+
+    <button
+      *ngIf="canManageICD9()"
+      mat-raised-button
+      color="primary"
+      (click)="openProcedureDialog()"
+      style="margin: 10px;">
+      ניהול קודי ICD9
+    </button>
   </div>
-  
-  
 
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-    <!-- <div class="container-fluid mb-2">
-      <div class="row search-count">
-        <div class="col">
-          <div dir="rtl" class="card">
-            <div dir="rtl" class="card-body">
-              <ng-container *ngFor="let column of columns; let i = index">
-                
-                <div class="filter-row" *ngIf="i % 4 === 0"></div>
-
-                <mat-form-field class="filter-field" *ngIf="column == 'departName'">
-                  <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
-                  <input type="text" matInput [formControl]="getFormControl(column)" [matAutocomplete]="auto" />
-
-                  <mat-autocomplete #auto="matAutocomplete">
-                    <mat-option *ngFor="let option of filteredResponsibilities | async" [value]="option">
-                      {{ option }}
-                    </mat-option>
-                  </mat-autocomplete>
-                </mat-form-field>
-
-                <mat-form-field *ngIf="column !== 'departName'" class="filter-field">
-                  <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
-                  <div *ngIf="column !== 'insert_time' && column !== 'update_time'">
-                    <input matInput [formControl]="getFormControl(column)" class="filter-input" />
-
-                    <div class="name-select-wrapper">
-                      <mat-select *ngIf="column === 'ssP_DESCRIPTION'" [formControl]="getFormControl(column)" class="name-select">
-                        <mat-option *ngFor="let option of answerTextOptions" [value]="option">
-                          {{ option }}
-                        </mat-option>
-                      </mat-select>
-                    </div> 
-                  </div>
-
-                  <div *ngIf="column == 'insert_time' || column == 'update_time'" #datepicker class="datepicker-field">
-                    <input matInput [formControl]="getFormControl(column)" [matDatepicker]="picker" dir="rtl" />
-                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <mat-datepicker #picker></mat-datepicker>
-                  </div>
-                </mat-form-field>
-              </ng-container>
-            </div>
-            <div class="reset-button-container">
-              <button mat-button (click)="resetFilters()" mat-raised-button color="primary" class="custom-button" matTooltip="Reset Filters">
-                <i class="material-icons">refresh</i>
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
     <div dir="rtl" style="display: flex; justify-content: space-between; align-items: center">
       <mat-form-field class="long-search-bar" style="flex: 1; padding-right: 10px">
         <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
         <input matInput [formControlName]="'globalFilter'" class="search-input" />
       </mat-form-field>
-      <!-- <div class="graph-button-container">
-        <img (click)="navigateToGraphPage()" matTooltip="Move To Graph" src="../../../../assets/graphIcon.png" width="50px" />
-      </div> -->
-      <!-- <div class="icon" matTooltip="Download Excel">
-        <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
-      </div> -->
     </div>
   </form>
 
-
-
   <mat-tab-group dir="rtl">
+    <!-- ✅ TAB 1: Drug Surgery Report -->
+    <mat-tab label="דו״ח תרופות וניתוחים">
+      <img
+        src="../../assets/excel.png"
+        alt="Download"
+        (click)="exportToExcelMain()"
+        class="download-icon"
+        width="50px" />
 
-      <!-- ✅ TAB 1: Drug Surgery Report -->
-  <mat-tab label="דו״ח תרופות וניתוחים">
-    <img src="../../assets/excel.png" alt="Download" (click)="exportToExcelMain()" class="download-icon" width="50px" />
-    <mat-form-field appearance="outline">
-      <mat-label>חיפוש</mat-label>
-      <input matInput (keyup)="applyMainFilter($event)" placeholder="חפש בטבלה">
-    </mat-form-field>
-    
-
-    <mat-table [dataSource]="matTableDataSource" matSort #mainSort="matSort" dir="rtl" class="mat-elevation-z8">
-      <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>
-          {{ getColumnLabel(column) }}
-        </mat-header-cell>
-        <mat-cell *matCellDef="let row" [ngClass]="getCellClass(column, row[column])">
-          <ng-container [ngSwitch]="column">
-            <ng-container *ngSwitchCase="'DrugGiveTime'">
-              {{ row[column] | date: 'yyyy-MM-dd HH:mm' }}
-            </ng-container>
-            <ng-container *ngSwitchCase="'OperationStartTime'">
-              {{ row[column] | date: 'yyyy-MM-dd HH:mm' }}
-            </ng-container>
-            <ng-container *ngSwitchCase="'OperationEndTime'">
-              {{ row[column] | date: 'yyyy-MM-dd HH:mm' }}
-            </ng-container>
-            <ng-container *ngSwitchDefault>
-              {{ row[column] }}
-            </ng-container>
-          </ng-container>
-        </mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: columns"></mat-row>
-    </mat-table>
-
-    <mat-paginator
-      #mainPaginator
-      [length]="matTableDataSource.data.length || 0"
-      [pageSize]="5"
-      [pageSizeOptions]="[5, 50, 100]">
-    </mat-paginator>
-
-  </mat-tab>
-  
-    <!-- ✅ TAB 2: No Drugs Report -->
-    <mat-tab label="ללא תרופות ברשימה">
-  
-      <!-- כפתור אקסל לטבלת ללא תרופות -->
-      <img src="../../assets/excel.png" alt="Download" (click)="exportToExcelNoDrugs()" class="download-icon" width="50px" />
       <mat-form-field appearance="outline">
         <mat-label>חיפוש</mat-label>
-        <input matInput (keyup)="applyNoDrugsFilter($event)" placeholder="חפש בטבלה">
+        <input matInput (keyup)="applyMainFilter($event)" placeholder="חפש בטבלה" />
       </mat-form-field>
-      <mat-table [dataSource]="noDrugsMatTableDataSource" matSort #noDrugsSort="matSort" dir="rtl" class="mat-elevation-z8">
+
+      <mat-table
+        [dataSource]="matTableDataSource"
+        matSort
+        #mainSort="matSort"
+        dir="rtl"
+        class="mat-elevation-z8">
+
+        <ng-container *ngFor="let column of columns" [matColumnDef]="column">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>
+            {{ getColumnLabel(column) }}
+          </mat-header-cell>
+
+          <mat-cell *matCellDef="let row" [ngClass]="getCellClass(column, row[column])">
+            <ng-container [ngSwitch]="column">
+              <ng-container *ngSwitchCase="'drugGiveTime'">
+                {{ row[column] | date:'yyyy-MM-dd HH:mm' }}
+              </ng-container>
+              <ng-container *ngSwitchCase="'operationStartTime'">
+                {{ row[column] | date:'yyyy-MM-dd HH:mm' }}
+              </ng-container>
+              <ng-container *ngSwitchCase="'operationEndTime'">
+                {{ row[column] | date:'yyyy-MM-dd HH:mm' }}
+              </ng-container>
+              <ng-container *ngSwitchDefault>
+                {{ row[column] }}
+              </ng-container>
+            </ng-container>
+          </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: columns"></mat-row>
+      </mat-table>
+
+      <mat-paginator
+        #mainPaginator
+        [length]="matTableDataSource.data.length || 0"
+        [pageSize]="5"
+        [pageSizeOptions]="[5, 50, 100]">
+      </mat-paginator>
+    </mat-tab>
+
+    <!-- ✅ TAB 2: No Drugs Report -->
+    <mat-tab label="ללא תרופות ברשימה">
+      <img
+        src="../../assets/excel.png"
+        alt="Download"
+        (click)="exportToExcelNoDrugs()"
+        class="download-icon"
+        width="50px" />
+
+      <mat-form-field appearance="outline">
+        <mat-label>חיפוש</mat-label>
+        <input matInput (keyup)="applyNoDrugsFilter($event)" placeholder="חפש בטבלה" />
+      </mat-form-field>
+
+      <mat-table
+        [dataSource]="noDrugsMatTableDataSource"
+        matSort
+        #noDrugsSort="matSort"
+        dir="rtl"
+        class="mat-elevation-z8">
+
         <ng-container *ngFor="let column of noDrugsColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>
             {{ getColumnLabel(column) }}
@@ -196,22 +161,17 @@
             {{ row[column] }}
           </mat-cell>
         </ng-container>
-  
+
         <mat-header-row *matHeaderRowDef="noDrugsColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: noDrugsColumns"></mat-row>
       </mat-table>
-  
-      <mat-paginator
-      matSort 
 
+      <mat-paginator
         #noDrugsPaginator
         [length]="noDrugsMatTableDataSource.data.length || 0"
         [pageSize]="5"
         [pageSizeOptions]="[10, 50, 100]">
       </mat-paginator>
-  
     </mat-tab>
-
   </mat-tab-group>
-  
 </div>
