--- a/src/app/chameleon-reports/patient-guidance-report/patient-guidance-report.component.scss
+++ b/src/app/chameleon-reports/patient-guidance-report/patient-guidance-report.component.scss
@@ -227,4 +227,7 @@
     justify-content: flex-end; /* Aligns horizontally to the right */
     padding: 10px; /* Add some padding */
   }
-  
+  .body {
+    margin-top:  50px;
+    margin-bottom: 50px;
+  }
